--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -40,6 +40,7 @@ audio{
 
 .annotations {
   margin: 100px auto;
+  position: relative;
 }
 
 .note {
@@ -47,6 +48,9 @@ audio{
   text-align: center;
   color: black;
   background: yellow;
+  position: absolute;
+  top: 25%;
+  z-index: 99;
 }
 
 uib-slide {
