--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -11,11 +11,18 @@ body {
   width: 8%;
 }
 
+.headers {
+  position: relative;
+}
+
 h1 {
   color: yellow;
   font-size: 20pt;
-  border: 3pt solid yellow;
+  border: 2pt solid yellow;
   text-align: center;
+  position: absolute;
+  top: 0px;
+  padding: 4px;
 }
 
 h1:hover {
@@ -24,14 +31,12 @@ h1:hover {
 }
 
 form {
-  margin: 500px auto;
+  margin: 400px auto;
   width: 600px;
 }
 
-form input {
-  border: 2pt solid yellow;
-  text-decoration: none;
-  border-radius: 1px;
+.form-control:focus {
+  border-color: yellow;
 }
 
 .music {
