--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -87,8 +87,13 @@ audio{
 Annotations
 */
 
-.annotations {
+.current-song {
   margin: 50px auto;
+  font-size: 20pt;
+}
+
+.annotations {
+  margin: 5px auto;
   height: 600px;
 }
 
